[gd_scene load_steps=6 format=3 uid="uid://b6gb1tki30fgx"]

[ext_resource type="PackedScene" uid="uid://cshyyrbbdm6om" path="res://Scenes/Interaction.tscn" id="1_kcpi7"]
[ext_resource type="Script" path="res://Scripts/ProtoAbstractComposition.gd" id="1_ws884"]

[sub_resource type="QuadMesh" id="QuadMesh_w2f5k"]

[sub_resource type="CylinderMesh" id="CylinderMesh_bwors"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_yxlxv"]

[node name="Abstract Composition Parent" type="Node3D"]
script = ExtResource("1_ws884")

[node name="CSGMesh3D" type="CSGMesh3D" parent="."]
transform = Transform3D(3.5, -1.74393e-15, 3.48787e-16, 1.22075e-15, 5, -3.48787e-16, -1.22075e-15, 1.74393e-15, 1, 2.08165e-12, 2.5, -4.07652)
mesh = SubResource("QuadMesh_w2f5k")

[node name="CSGMesh3D2" type="CSGMesh3D" parent="."]
transform = Transform3D(1.5, 0, 0, 0, 0.5, 0, 0, 0, 1.5, -0.0156717, 0.538647, -0.0248671)
mesh = SubResource("CylinderMesh_bwors")

[node name="Interaction" parent="CSGMesh3D2" instance=ExtResource("1_kcpi7")]

[node name="CollisionShape3D" parent="CSGMesh3D2/Interaction" index="0"]
transform = Transform3D(1.00301, 0, 0, 0, 1.03633, 0, 0, 0, 1.00301, 0, 0, 0)
shape = SubResource("CylinderShape3D_yxlxv")

[node name="SolvePoint" type="Node3D" parent="."]
transform = Transform3D(-1, 3.48787e-16, -8.74228e-08, 3.48787e-16, 1, -3.48787e-16, 8.74228e-08, -3.48787e-16, -1, 2.08165e-12, 2.08165e-12, 1.6)

[node name="LookPoint" type="Node3D" parent="."]
transform = Transform3D(-1, 3.48787e-16, -8.74228e-08, 3.48787e-16, 1, -3.48787e-16, 8.74228e-08, -3.48787e-16, -1, 2.08165e-12, 1.49309, -0.00755894)

[connection signal="interacted" from="CSGMesh3D2/Interaction" to="." method="_on_interaction_interacted"]

[editable path="CSGMesh3D2/Interaction"]
